OOPCourse/src/objects/Candidate_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Candidate_Full_Name__c</fullName>
        <label>Candidate Full Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Candidate Snapshot</label>
    <nameField>
        <displayFormat>SNAP-{0000}</displayFormat>
        <label>Candidate Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>